syntax = "proto3";

package registry;
option go_package = "github.com/galxe/spotted-network/proto";

service Registry {
  // get registry id
  rpc GetRegistryID(GetRegistryIDRequest) returns (GetRegistryIDResponse) {}
  
  // handle node join request
  rpc Join(JoinRequest) returns (JoinResponse) {}
}

message GetRegistryIDRequest {}

message GetRegistryIDResponse {
  string registry_id = 1;
}

message JoinRequest {
  string address = 1;   
  string message = 2;    
  string signature = 3; 
  string signing_key = 4; 
}

message JoinResponse {
  bool success = 1;
  string error = 2;     
} 